archive/parser/tests/snapshots/statements/valid/0043@4.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE TABLE types (a geometry(point) NOT NULL);
---
Parse {
    cst: SourceFile@0..48
      Create@0..6 "CREATE"
      Whitespace@6..7 " "
      Table@7..12 "TABLE"
      Whitespace@12..13 " "
      TypesP@13..18 "types"
      Whitespace@18..19 " "
      Ascii40@19..20 "("
      Ident@20..21 "a"
      Whitespace@21..22 " "
      Ident@22..30 "geometry"
      Ascii40@30..31 "("
      Ident@31..36 "point"
      Ascii41@36..37 ")"
      Whitespace@37..38 " "
      Not@38..41 "NOT"
      Whitespace@41..42 " "
      NullP@42..46 "NULL"
      Ascii41@46..47 ")"
      Ascii59@47..48 ";"
    ,
    errors: [],
    stmts: [],
}
