archive/parser/tests/snapshots/statements/valid/0043@6.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE TABLE capitals (state char(2)) INHERITS (cities);
---
Parse {
    cst: SourceFile@0..56
      CreateStmt@0..56
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        Table@7..12 "TABLE"
        Whitespace@12..13 " "
        RangeVar@13..21
          Ident@13..21 "capitals"
        Whitespace@21..22 " "
        Ascii40@22..23 "("
        ColumnDef@23..35
          Ident@23..28 "state"
          Whitespace@28..29 " "
          TypeName@29..35
            CharP@29..33 "char"
            Ascii40@33..34 "("
            AConst@34..35
              Iconst@34..35 "2"
        Ascii41@35..36 ")"
        Ascii41@36..37 ")"
        Whitespace@37..38 " "
        Inherits@38..46 "INHERITS"
        Whitespace@46..47 " "
        Ascii40@47..48 "("
        RangeVar@48..54
          Ident@48..54 "cities"
        Ascii41@54..55 ")"
        Ascii59@55..56 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateStmt(
                CreateStmt {
                    relation: Some(
                        RangeVar {
                            catalogname: "",
                            schemaname: "",
                            relname: "capitals",
                            inh: true,
                            relpersistence: "p",
                            alias: None,
                            location: 13,
                        },
                    ),
                    table_elts: [
                        Node {
                            node: Some(
                                ColumnDef(
                                    ColumnDef {
                                        colname: "state",
                                        type_name: Some(
                                            TypeName {
                                                names: [
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "pg_catalog",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                    Node {
                                                        node: Some(
                                                            String(
                                                                String {
                                                                    sval: "bpchar",
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                type_oid: 0,
                                                setof: false,
                                                pct_type: false,
                                                typmods: [
                                                    Node {
                                                        node: Some(
                                                            AConst(
                                                                AConst {
                                                                    isnull: false,
                                                                    location: 34,
                                                                    val: Some(
                                                                        Ival(
                                                                            Integer {
                                                                                ival: 2,
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ],
                                                typemod: -1,
                                                array_bounds: [],
                                                location: 29,
                                            },
                                        ),
                                        compression: "",
                                        inhcount: 0,
                                        is_local: true,
                                        is_not_null: false,
                                        is_from_type: false,
                                        storage: "",
                                        raw_default: None,
                                        cooked_default: None,
                                        identity: "",
                                        identity_sequence: None,
                                        generated: "",
                                        coll_clause: None,
                                        coll_oid: 0,
                                        constraints: [],
                                        fdwoptions: [],
                                        location: 23,
                                    },
                                ),
                            ),
                        },
                    ],
                    inh_relations: [
                        Node {
                            node: Some(
                                RangeVar(
                                    RangeVar {
                                        catalogname: "",
                                        schemaname: "",
                                        relname: "cities",
                                        inh: true,
                                        relpersistence: "p",
                                        alias: None,
                                        location: 48,
                                    },
                                ),
                            ),
                        },
                    ],
                    partbound: None,
                    partspec: None,
                    of_typename: None,
                    constraints: [],
                    options: [],
                    oncommit: OncommitNoop,
                    tablespacename: "",
                    access_method: "",
                    if_not_exists: false,
                },
            ),
            range: 0..55,
        },
    ],
}
