archive/parser/tests/snapshots/statements/valid/0043@9.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE TEMPORARY TABLE films_recent ON COMMIT DROP AS SELECT * FROM films WHERE date_prod > $1;
---
Parse {
    cst: SourceFile@0..93
      Create@0..6 "CREATE"
      Whitespace@6..7 " "
      Temporary@7..16 "TEMPORARY"
      Whitespace@16..17 " "
      Table@17..22 "TABLE"
      Whitespace@22..23 " "
      Ident@23..35 "films_recent"
      Whitespace@35..36 " "
      On@36..38 "ON"
      TransactionStmt@38..44
        Commit@38..44 "COMMIT"
      Drop@44..48 "DROP"
      Whitespace@48..49 " "
      As@49..51 "AS"
      Whitespace@51..52 " "
      Select@52..58 "SELECT"
      Whitespace@58..59 " "
      Ascii42@59..60 "*"
      Whitespace@60..61 " "
      From@61..65 "FROM"
      Whitespace@65..66 " "
      Ident@66..71 "films"
      Whitespace@71..72 " "
      Where@72..77 "WHERE"
      Whitespace@77..78 " "
      Ident@78..87 "date_prod"
      Whitespace@87..88 " "
      Ascii62@88..89 ">"
      Whitespace@89..90 " "
      Param@90..92 "$1"
      Ascii59@92..93 ";"
    ,
    errors: [
        SyntaxError(
            "Expected Ascii59, found Whitespace",
            38..38,
        ),
        SyntaxError(
            "Invalid statement: syntax error at end of input",
            0..9,
        ),
        SyntaxError(
            "Expected Ascii59, found Whitespace",
            45..45,
        ),
        SyntaxError(
            "Invalid statement: syntax error at or near \"AS\"",
            12..32,
        ),
    ],
    stmts: [
        RawStmt {
            stmt: TransactionStmt(
                TransactionStmt {
                    kind: TransStmtCommit,
                    options: [],
                    savepoint_name: "",
                    gid: "",
                    chain: false,
                },
            ),
            range: 38..45,
        },
    ],
}
