archive/parser/tests/snapshots/statements/valid/0046@1.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: CREATE TYPE type1;
---
Parse {
    cst: SourceFile@0..18
      DefineStmt@0..18
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        TypeP@7..11 "TYPE"
        Whitespace@11..12 " "
        Ident@12..17 "type1"
        Ascii59@17..18 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: DefineStmt(
                DefineStmt {
                    kind: ObjectType,
                    oldstyle: false,
                    defnames: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "type1",
                                    },
                                ),
                            ),
                        },
                    ],
                    args: [],
                    definition: [],
                    if_not_exists: false,
                    replace: false,
                },
            ),
            range: 0..17,
        },
    ],
}
