archive/parser/tests/snapshots/statements/valid/0046@6.snap
---
source: crates/parser/tests/statement_parser_test.rs
description: "CREATE TYPE type1 AS RANGE (subtype = int4, receive = receive_func, passedbyvalue);"
---
Parse {
    cst: SourceFile@0..83
      CreateRangeStmt@0..83
        Create@0..6 "CREATE"
        Whitespace@6..7 " "
        TypeP@7..11 "TYPE"
        Whitespace@11..12 " "
        Ident@12..17 "type1"
        Whitespace@17..18 " "
        As@18..20 "AS"
        Whitespace@20..21 " "
        Range@21..26 "RANGE"
        Whitespace@26..27 " "
        Ascii40@27..28 "("
        DefElem@28..42
          Ident@28..35 "subtype"
          Whitespace@35..36 " "
          Ascii61@36..37 "="
          Whitespace@37..38 " "
          TypeName@38..42
            Ident@38..42 "int4"
        Ascii44@42..43 ","
        Whitespace@43..44 " "
        DefElem@44..66
          Ident@44..51 "receive"
          Whitespace@51..52 " "
          Ascii61@52..53 "="
          Whitespace@53..54 " "
          TypeName@54..66
            Ident@54..66 "receive_func"
        Ascii44@66..67 ","
        Whitespace@67..68 " "
        DefElem@68..81
          Ident@68..81 "passedbyvalue"
        Ascii41@81..82 ")"
        Ascii59@82..83 ";"
    ,
    errors: [],
    stmts: [
        RawStmt {
            stmt: CreateRangeStmt(
                CreateRangeStmt {
                    type_name: [
                        Node {
                            node: Some(
                                String(
                                    String {
                                        sval: "type1",
                                    },
                                ),
                            ),
                        },
                    ],
                    params: [
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "subtype",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    TypeName(
                                                        TypeName {
                                                            names: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "int4",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            type_oid: 0,
                                                            setof: false,
                                                            pct_type: false,
                                                            typmods: [],
                                                            typemod: -1,
                                                            array_bounds: [],
                                                            location: 38,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 28,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "receive",
                                        arg: Some(
                                            Node {
                                                node: Some(
                                                    TypeName(
                                                        TypeName {
                                                            names: [
                                                                Node {
                                                                    node: Some(
                                                                        String(
                                                                            String {
                                                                                sval: "receive_func",
                                                                            },
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                            type_oid: 0,
                                                            setof: false,
                                                            pct_type: false,
                                                            typmods: [],
                                                            typemod: -1,
                                                            array_bounds: [],
                                                            location: 54,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        defaction: DefelemUnspec,
                                        location: 44,
                                    },
                                ),
                            ),
                        },
                        Node {
                            node: Some(
                                DefElem(
                                    DefElem {
                                        defnamespace: "",
                                        defname: "passedbyvalue",
                                        arg: None,
                                        defaction: DefelemUnspec,
                                        location: 68,
                                    },
                                ),
                            ),
                        },
                    ],
                },
            ),
            range: 0..82,
        },
    ],
}
